tests/paczka1/small_fuzzy/12032962.err
Error in line 2: 4U59rimC91F A527 42,0
Error in line 4: A77 S85 46,0
Error in line 13: R05FQH A527 52,7
